fix unauthorized get topics
